      redirected to a file.  This improves interoperability with tools like grep,
      sort, etc.  To for colorization, use the --color option.  Fixes GH #155.
      Thanks @mar-kolya.

      [ENHANCEMENTS]

      - When using the "add" command, the paths to the local archives can now be
      expressed using file:// URLs.

      [DOCUMENTATION]

      - Revised the Tutorial and QuickStart documentation.

0.09992   2014-04-23 15:14:50 America/Los_Angeles

      [BUG FIXES]

      - Fixed extra newlines that were inserted into large responses
      from Pinto::Server.  Closes GH #154.  Thanks @mar-kolya.

0.09991   2014-04-05 06:28:18 America/Denver

      [BUG FIXES]

      - Fixed timezone handling for remote users.  But it only applies
      to new revisions.  Old ones will probably still be reported in
      the wrong timezone (unless you happen to be in the right one).

0.0999    2014-04-03 22:53:31 America/Los_Angeles

      [INCOMPATIBLE CHANGES]

      - Internal API changes only. Now all the attributes that were named
      "from_stack" are named "stack". This makes the API more consistent, since
      the "stack" is almost always the thing that is in play.

      [OTHER CHANGES]

      - No new features, enhancements, or bug fixes.

0.0998    2014-03-31 15:27:14 America/Los_Angeles

      [BUG FIXES]

      - Fixed behavior and error message when the repository is not
      writable by the user.  Fixes GH #150.  Thanks @bkysela.

0.0997    2014-03-23 20:36:48 America/Los_Angeles

      [BUG FIXES]

      - Fixed behavior of the --force flag on the new "update" command.
      It now applies to all packages that might be updated, not just the
      targets list on the command line.

      [ENHANCEMENTS]

      - When generating the title for the log message, only the targets
      at the top of the dependency graph are listed, and only if they
      (or one of their prerequisites) were actually affected by the